# bah2026-ps13

./: .dockerignore  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml  idea.md  pyproject.toml  requirements-core.txt  requirements.txt
.github/workflows/: ci.yml
corpus/: README.md
corpus/incidents/: INC-2026-0007.json  INC-2026-0011.json  INC-2026-0014.json  INC-2026-0019.json
corpus/playbooks/: bgp_flap.json  congestion.json  policy_drift.json  tunnel_degradation.json
corpus/runbooks/: bgp_flap.md  congestion.md  policy_drift.md  tunnel_degradation.md
corpus/topology/: topology.json
docker/: Dockerfile
docs/: BUILD_PLAN.md  DEMO.md  EVALUATION.md
grafana/: README.md  grafana.ini
grafana/dashboards/: netra-risk-overview.json  netra-telemetry.json
grafana/provisioning/dashboards/: netra.yaml
grafana/provisioning/datasources/: victoriametrics.yaml
netra/: README.md  __init__.py
netra/analytics/: README.md  __init__.py  requirements-analytics.txt  requirements-correlation.txt
netra/analytics/anomaly/: __init__.py  base.py  changepoint.py  deep.py  detectors.py  evt.py  matrixprofile.py  ml.py  statistical.py
netra/analytics/correlation/: README.md  __init__.py  blast_radius.py  correlate.py  graph.py  rca.py
netra/analytics/explain/: __init__.py  shap_explain.py  signals.py
netra/analytics/forecasting/: __init__.py  base.py  classical.py  ensemble.py  foundation.py  ml.py  tti.py
netra/analytics/fusion/: __init__.py  calibrate.py  evt.py  fuse.py  normalize.py  registry.py
netra/analytics/risk/: __init__.py  calibrate.py  prioritize.py  score.py  suppress.py
netra/api/: README.md  __init__.py  app.py  deps.py  providers.py  requirements-api.txt
netra/api/routes/: __init__.py  analytics.py  copilot.py  health.py  stream.py
netra/contracts/: __init__.py  analytics.py  common.py  copilot.py  enums.py  features.py  incident.py  scenario.py  telemetry.py
netra/copilot/: README.md  __init__.py  orchestrator.py  requirements-copilot.txt
netra/copilot/grounding/: __init__.py  citations.py  faithfulness.py
netra/copilot/llm/: __init__.py  base.py  grammar.gbnf  grammar.py  llama_cpp_client.py  template_client.py
netra/copilot/rag/: __init__.py  embed.py  graphrag.py  ingest.py  rerank.py  retrieve.py  store.py
netra/datagen/: README.md  __init__.py  cli.py  requirements-datagen.txt  scenarios.py  source.py  synthetic.py  topology.py
netra/pipeline/: __init__.py  orchestrator.py  report.py  topology_adapter.py
netra/streaming/: README.md  __init__.py  alerts.py  detectors.py  engine.py  features.py  requirements-streaming.txt  sources.py
research/: 01-network-simulation.md  02-telemetry-pipeline.md  03-predictive-timeseries.md  04-predictive-anomaly-graph.md  05-offline-llm.md  06-rag-vectordb.md  07-noc-workflow-security.md
scripts/: README.md  airgap_verify.sh  bundle.sh  demo.py  install.sh  license_inventory.py  run_demo.sh
security/: .env.example  README.md  compose.security.yml  docker-user.sh  falco-egress.yaml  networks.md  nftables.conf  seccomp-llm.json
security/firejail/: llama-server-bwrap.sh  llama-server.profile
sim/: Makefile  README.md  topology.clab.yml
sim/configs/: render_configs.py
sim/configs/frr/: daemons
sim/configs/frr/ce-br1/: frr.conf
sim/configs/frr/ce-br2/: frr.conf
sim/configs/frr/ce-br3/: frr.conf
sim/configs/frr/ce-dc/: frr.conf
sim/configs/frr/ce-hub/: frr.conf
sim/configs/frr/p1/: frr.conf
sim/configs/frr/p3/: frr.conf
sim/configs/frr/p4/: frr.conf
sim/configs/frr/pe-dc2/: frr.conf
sim/configs/frr/rr-dc/: frr.conf
sim/configs/qos/: tc-qos.sh
sim/configs/srlinux/: p2.cfg  pe-dc1.cfg  pe-hub.cfg
sim/configs/strongswan/: ce-br1.ipsec.conf  ce-br2.ipsec.conf  ce-br3.ipsec.conf  ce-hub.ipsec.conf  ipsec.secrets
sim/configs/templates/: frr_pe.conf.j2
sim/faults/: _labels.py  a_congestion.py  b_bgp_flap.py  c_tunnel.py  d_drift.py  run_all.py
sim/netlab/: topology.yml
telemetry/: README.md  compose.telemetry.yml  gnmic.yaml  nats-streams.sh  scrape.yml  telegraf.conf  victoriametrics.yaml  vmagent.yaml
telemetry/pmacct/: nfacctd.conf
tests/: README.md  test_analytics.py  test_api.py  test_copilot.py  test_correlation.py  test_datagen.py  test_pipeline.py  test_security.py  test_streaming.py
tests/airgap/: README.md  conftest.py  demo_airgap.sh  test_airgap_conformance.py
ui/: README.md  app.js  index.html  style.css
